[gd_scene load_steps=5 format=3 uid="uid://bkvk8gomb0cjk"]

[ext_resource type="Script" uid="uid://dvxl3acbl4nr1" path="res://Scripts/hud.gd" id="1_fccik"]
[ext_resource type="FontFile" uid="uid://b48bsvgixqts5" path="res://Assets/Fonts/Xolonium-Regular.ttf" id="2_bjfho"]

[sub_resource type="InputEventAction" id="InputEventAction_fccik"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_bjfho"]
events = [SubResource("InputEventAction_fccik")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_fccik")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_bjfho")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bjfho")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 90.0
offset_right = 20.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_bjfho")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.5
offset_top = -204.0
offset_right = 139.5
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bjfho")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_bjfho")
text = "Start!"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bjfho")
theme_override_font_sizes/font_size = 64
text = "Quit"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
